--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,9 +14,21 @@
         密码：<input type="password" name="password">
     </div>
     <div>
+        <input type="text" class="form-control" name="verifyCode" required="required" placeholder="验证码">
+        <img src="getVerifyCode" title="看不清，点我刷新" onclick="refresh(this)" onmouseover="mouseover(this)">
+    </div>
+    <div>
         <label><input type="checkbox" name="remember-me">自动登录</label>
         <button type="submit">立即登陆</button>
     </div>
 </form>
+<script>
+    function refresh(obj) {
+        obj.src="getVerifyCode?" +Math.random();
+    }
+    function mouseover(obj) {
+        obj.style.cursor="pointer";
+    }
+</script>
 </body>
 </html>
