--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,24 @@
         <button type="submit">立即登陆</button>
     </div>
 </form>
+<form method="post" action="/sms/login">
+    <div>
+        手机号：<input type="text" id="mobile" name="mobile" value="galgadot">
+    </div>
+    <div>
+        验证码：<input type="text" name="smsCode">
+        <a href="javascript:;" onclick="sendSms()">获取验证码</a>
+    </div>
+    <div>
+        <button type="submit">立即登陆</button>
+    </div>
+</form>
+
+<script>
+    function sendSms() {
+        window.location.href = '/sms/code?mobile=' + document.getElementById("mobile").value;
+    }
+</script>
 <script>
     function refresh(obj) {
         obj.src="getVerifyCode?" +Math.random();
